--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </div>
 
         <div class="search">
-            <input type="text" id="pokemon" name="pokemon" placeholder="Nombre o id del pokemón">
-            <button onclick="cambiarPokemon()"><i class="bi bi-search"></i>Buscar</button>
+            <input  type="text" id="pokemon" name="pokemon" placeholder="Nombre del pokemón">
+            <button onclick="cambiarPokemon()"><i class="bi bi-search"></i><span>Buscar</span></button>
         </div>
 
         <div class="screen-left">
