Agrego función para buscar a todos los pokemon

--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
         </div>
 
         <div class="search">
-            <input  type="text" id="pokemon" name="pokemon" placeholder="Nombre del pokemón">
+            <input type="text" id="pokemon" name="pokemon" placeholder="Nombre del pokemón">
             <button onclick="cambiarPokemon()"><i class="bi bi-search"></i><span>Buscar</span></button>
+            <button onclick="allPokemons()">Buscar todos</button>
         </div>
 
         <div class="screen-left">
@@ -116,6 +117,10 @@
                 <dl id="list-moves">
                 </dl>
             </div>
+        </div>
+        <div id="all-pokemons">
+            <dl id="list-pokemons">
+            </dl>
         </div>
         </div>
         <div class="grid-blue"><!--Botones azules -->
