Agrego filtro de entrada y optimizació de filtro de la funcion de buscar a todos

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
         <div class="search">
             <div>
-                <input type="text" id="pokemon" name="pokemon" placeholder="Nombre del pokemón">
+                <input type="text" id="pokemon" name="pokemon" placeholder="Nombre o id del pokemón">
                 <button onclick="cambiarPokemon()"><i class="bi bi-search"></i><span>Buscar</span></button>
             </div>
-            <button id="all-pokes" onclick="allPokemons()">Buscar todos</button>
+            <button id="all-pokes" onclick="allPokemons()">Mostrar todos</button>
         </div>
 
         <div class="screen-left">
