Cambio estilo de los botones

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 
         <div class="direction-buttons"> <!-- Botones de cruz -->
         <div></div>
-        <div><i class="bi bi-caret-up-square-fill" onclick="previousPokemon()"></i></div>
+        <div><i class="bi bi-caret-up-fill" onclick="previousPokemon()"></i></div>
         <div></div>
-        <div><i class="bi bi-caret-left-square-fill" onclick="previousPokemon()"></i></div>
-        <div><i class="bi bi-square-fill" id="center"></i></div>
-        <div><i class="bi bi-caret-right-square-fill" onclick="nextPokemon()"></i></div>
+        <div><i id="left" class="bi bi bi-caret-left-fill" onclick="previousPokemon()"></i></div>
+        <div id="center"></div>
+        <div><i class="bi bi bi-caret-right-fill" onclick="nextPokemon()"></i></div>
         <div></div>
-        <div><i class="bi bi-caret-down-square-fill" onclick="nextPokemon()"></i></div>
+        <div><i class="bi bi-caret-down-fill" onclick="nextPokemon()"></i></div>
         <div></div>
     </div>
     <div class="green-part">
